Fixed missing references

--- a/school/elec_302/lab_03/tex/lab_report_3.tex
+++ b/school/elec_302/lab_03/tex/lab_report_3.tex
@@ -220,24 +220,31 @@ Equations Used:
 
 \section{Conclusions}
 
-By measuring the resistance of each transformer winding and not getting any extremely high resistance readings
-similar to an open circuit, it was determined that the windings were intact and had integrity.
+By measuring the resistance of each transformer winding and not getting any
+extremely high resistance readings similar to an open circuit, it was
+determined that the windings were intact and had integrity.
 
-In Table~\ref{tab:equiv_circ}, the component values for the transformer equivalent circuit are listed. These
-values were needed to accurately model the equivalent circuit due to the imperfections in real transformers. The
-resistance R$_{eq}$ was made up of R$_P$ + R$_S$. R$_P$ was a resistance in the primary circuit that represented the
-resistive losses in the primary windings of the transformer core. Similarly, R$_S$ was a resistance in the secondary
+In Table~\ref{tab:equiv_comp}, the component values for the transformer
+equivalent circuit are listed. These values were needed to accurately model the
+equivalent circuit due to the imperfections in real transformers. The
+resistance R$_{eq}$ was made up of R$_P$ + R$_S$. R$_P$ was a resistance in the
+primary circuit that represented the resistive losses in the primary windings
+of the transformer core. Similarly, R$_S$ was a resistance in the secondary
 circuit that represented the resistive losses in the secondary windings of the
-transformer core. The reactance X$_{eq}$
-was made up of X$_P$ + X$_S$. These reactances represented the leakage inductances of the primary and secondary coils.
-The core excitation losses were modeled with a resistance R$_C$ in parallel with a reactance X$_M$.
+transformer core. The reactance X$_{eq}$ was made up of X$_P$ + X$_S$. These
+reactances represented the leakage inductances of the primary and secondary
+coils.  The core excitation losses were modeled with a resistance R$_C$ in
+parallel with a reactance X$_M$.
 
-In Table~\ref{tab:power_losses} the copper and core excitation losses for each load are listed. These losses were
-accounted for by the component values for the equivalent circuit found in Table~\ref{tab:equiv_circ}.
+In Table~\ref{tab:power_losses} the copper and core excitation losses for each
+load are listed. These losses were accounted for by the component values for
+the equivalent circuit found in Table~\ref{tab:equiv_comp}.
 
-In Table~\ref{tab:vr_eff}, the transformer voltage regulation and efficiencies for the transformer modeled in Part 1
-and the equivalent circuit are compared. On average small percent differences were obtained, thus the equivalent
-circuit constructed was an accurate model of the transformer in Part 1.
+In Table~\ref{tab:vr} and Table~\ref{tab:eff}, the transformer voltage
+regulation and efficiencies for the transformer modeled in Part 1 and the
+equivalent circuit are compared.  On average small percent differences were
+obtained, thus the equivalent circuit constructed was an accurate model of the
+transformer in Part 1.
 
 \section*{Circuits Tested}
 \begin{figure}[H]
