--- a/school/elec_302/lab_04/tex/lab_report_4.tex
+++ b/school/elec_302/lab_04/tex/lab_report_4.tex
@@ -24,6 +24,38 @@
 
 %\setlength\parindent{0pt} % Removes all indentation from paragraphs
 
+% Not sure where to put this yet, but want to get it in anyways.
+\begin{table}[H]
+  \centering
+  \begin{tabular}{*{6}{c}}
+    & \multicolumn{2}{c}{\textbf{Primary}}
+    & \multicolumn{2}{c}{\textbf{Secondary}} & \textbf{Load} \\
+    \textbf{Case} & \textbf{Line} & \textbf{Phase} & \textbf{Line} &
+    \textbf{Phase} & \textbf{Phase} \\
+    & V & V & V & V & V \\
+    \hline
+    Y--Y        & 120 & 69.3 & 120 & 11 & 69.3 \\
+    Y--$\Delta$ & 120 & 69.3 & 69.3 & 11 & 40 \\
+  \end{tabular}
+  \caption{Computed Voltages}
+  \label{tab:volt_comp}
+\end{table}
+
+\begin{table}[H]
+  \centering
+  \begin{tabular}{*{6}{c}}
+    & \multicolumn{2}{c}{\textbf{Primary}}
+    & \multicolumn{2}{c}{\textbf{Secondary}} & \textbf{Load} \\
+    \textbf{Case} & \textbf{Line} & \textbf{Phase} & \textbf{Line} &
+    \textbf{Phase} & \textbf{Phase} \\
+    & A & A & A & A & A \\
+    \hline
+    Y--Y        & 0.1033 & 0.1033 & 0.1033 & 0.1033 & 0.1033 \\
+    Y--$\Delta$ & 0.0596 & 0.0596 & 0.0344 & 0.0344 & 0.0344 \\
+  \end{tabular}
+  \caption{Computed Currents}
+  \label{tab:volt_comp}
+\end{table}
 \section{Purpose of Experiment}
 
 In this experiment, the non-ideal properties of a transformer were examined.
@@ -45,7 +77,7 @@ connector was connected between the EMS workstation and the {PC}. On the LVDAM
 EMS application software, the metering windows for E$_1$, E$_2$, I$_1$, and
 I$_2$ were opened and set to continuous refresh.
 
-\subsection{Transformer Performance}
+\subsection{The Three Phase Source}
 
 \label{part1} With the main power switch turned off and the voltage control
 knob fully counter-clockwise, the voltmeter selector switch was set to position
@@ -58,7 +90,7 @@ four loads listed in Table~\ref{tab:volt_rat}.  Prior to changing each load,
 the voltage supply knob was set fully counter-clockwise and the main power
 switch turned off.
 
-\subsection{Open Circuit Test}
+\subsection{Y--Y Connected Transformer}
 
 \label{part2} The circuit shown in Figure~\ref{fig:circuit_02} was then
 constructed. The main power switch was turned on and the voltage control knob
@@ -67,7 +99,7 @@ input power were measured. These values were recorded in
 Table~\ref{tab:open_circ}.  The main power switch was turned off and the
 voltage control knob fully counter-clockwise.
 
-\subsection{Short Circuit Test}
+\subsection{Y--$\Delta$ Connected Transformer}
 
 \label{part3} The circuit shown in Figure~\ref{fig:circuit_03} was then
 constructed. It was noted that I$_2$ short circuited the secondary windings
@@ -77,8 +109,16 @@ power, and the secondary current were measured and recorded in
 Table~\ref{tab:short_circ}.  The main power switch was turned off and the
 voltage control knob turned fully counter-clockwise.
 
+\subsection{$\Delta$--$\Delta$ Connected Transformer}
+
+\label{part4}
+
+\subsection{$\Delta$--Y Connected Transformer}
+
+\label{part5}
+
 \section{Results}
-\subsection{Transformer Performance}
+\subsection{The Three Phase Source}
 \begin{table}[H]
   \centering
   \begin{tabular}{*{2}{c}}
@@ -112,7 +152,7 @@ voltage control knob turned fully counter-clockwise.
   \label{tab:volt_rat}
 \end{table}
 
-\subsection{Open Circuit Test}
+\subsection{Y--Y Connected Transformer}
 \begin{table}[H]
   \centering
   \begin{tabular}{*{3}{c}}
@@ -126,7 +166,7 @@ voltage control knob turned fully counter-clockwise.
   \label{tab:open_circ}
 \end{table}
 
-\subsection{Short Circuit Test}
+\subsection{Y--$\Delta$ Connected Transformer}
 \begin{table}[H]
   \centering
   \begin{tabular}{*{4}{c}}
@@ -139,6 +179,10 @@ voltage control knob turned fully counter-clockwise.
   \caption{Data for Fig~\ref{fig:circuit_03}}
   \label{tab:short_circ}
 \end{table}
+
+\subsection{$\Delta$--$\Delta$ Connected Transformer}
+
+\subsection{$\Delta$--Y Connected Transformer}
 
 \section{Analysis}
 \subsection{Transformer Equivalent Circuit Component Values}
