Initial reformat & spellcheck.

--- a/school/elec_302/lab_04/tex/lab_report_4.tex
+++ b/school/elec_302/lab_04/tex/lab_report_4.tex
@@ -4,7 +4,7 @@
 \usepackage{mathtools}
 
 \title{ELEC 302-81\\ Lab 4\\ Transformers in Three Phase Circuits}
-\date{\today} 
+\date{\today}
 
 \begin{document}
 
@@ -21,62 +21,69 @@
 
 \pagebreak
 
-\setlength\parindent{0pt} 
+\setlength\parindent{0pt}
 
 \section{Purpose of Experiment}
 
 The purpose of this experiment was to observe the basic principals of balanced
-three-phase transformer circuits. Y-Y and Y-$\Delta$ connected transformer banks 
-were constructed separately to observe the differences, particularly in their 
-respective loads. Primary and secondary voltages, currents, and powers were first 
-calculated theoretically. Experimental values were then measured to compare. 
+three-phase transformer circuits. Y-Y and Y-$\Delta$ connected transformer
+banks were constructed separately to observe the differences, particularly in
+their respective loads. Primary and secondary voltages, currents, and powers
+were first calculated theoretically. Experimental values were then measured to
+compare.
 
 \section{Procedure}
 
 \subsection{EMS Workstation Set-up}
 
-At the Lab-Volt EMS workstation, the DAI 24V supply was turned on, and the DAI USB
-connector was connected between the EMS workstation and the {PC}. On the LVDAM
-EMS application software, the metering windows for E$_1$, E$_2$, I$_1$, I$_2$, 
-P$_1$, 3 phase power, E$_3$, I$_3$, and E$_1$ + E$_2$ + E$_3$ were opened. 
-Under \emph{Options} -> \emph{Acquistion Settings}, the \emph{Sample Window} dialog box 
-was set to extended, and under \emph{View} -> the continuous refresh option was checked.
+At the Lab-Volt EMS workstation, the DAI 24-V supply was turned on, and the DAI
+USB connector was connected between the EMS workstation and the {PC}. On the
+LVDAM EMS application software, the metering windows for E$_1$, E$_2$, I$_1$,
+I$_2$, P$_1$, 3 phase power, E$_3$, I$_3$, and E$_1$ + E$_2$ + E$_3$ were
+opened.  Under \emph{Options} -> \emph{Acquisition Settings}, the \emph{Sample
+Window} dialog box was set to extended, and under \emph{View} -> the continuous
+refresh option was checked.
 
 \subsection{The Three Phase Source}
 
-\label{part1} The circuit represented by Figure~\ref{fig:circuit_01} was constructed.
-The main power switch was set ON and the voltage supply was adjusted to 120-V line-to-
-line. Both the installed analog EMS voltmeter and the metering window were monitored
-for proper indications. The line voltages were then measured and recorded. These values 
-are shown in Table~\ref{tab:3phase_source}. The main power switch was set OFF and the 
-voltage supply fully CCW. The circuit represented by Figure~\ref{fig:circuit_02}
-was constructed. The main power switch was set ON and the voltage supply was adjusted 
-to read 120-V line-to-line. The installed analog EMS voltmeter was used for this since 
-the 120-V were to be measured across voltage sources 4-5 only. The phase voltages were
-then measured and recorded. These values are shown in Table~\ref{tab:3phase_source}.  
-The main power switch was set OFF and the voltage supply fully CCW.
+\label{part1} The circuit represented by Figure~\ref{fig:circuit_01} was
+constructed.  The main power switch was set ON and the voltage supply was
+adjusted to 120-V line-to- line. Both the installed analog EMS voltmeter and
+the metering window were monitored for proper indications. The line voltages
+were then measured and recorded. These values are shown in
+Table~\ref{tab:3phase_source}. The main power switch was set OFF and the
+voltage supply fully {CCW}. The circuit represented by
+Figure~\ref{fig:circuit_02} was constructed. The main power switch was set ON
+and the voltage supply was adjusted to read 120-V line-to-line. The installed
+analog EMS voltmeter was used for this since the 120-V were to be measured
+across voltage sources 4-5 only. The phase voltages were then measured and
+recorded. These values are shown in Table~\ref{tab:3phase_source}.  The main
+power switch was set OFF and the voltage supply fully CCW.
 
 \subsection{Y--Y Connected Transformer}
 
-\label{part2} The circuit shown in Figure~\ref{fig:circuit_03} was constructed. The 
-Y-connected load was 600 + j300 $\Omega$. The main power switch was turned on and the 
-voltage control knob was adjusted to 120-V line-to-line. The analog EMS voltmeter and 
-the metering window were both monitored for correct voltage. The values for primary and 
-secondary line voltage, primary and secondary line current, and primary input power were
-measured and recorded. A Fluke multimeter was used to measure the RMS voltage across the 
-load. This load voltage was labeled as $E_4$. These values are shown in Table~\ref{tab:results}.  
-The main power switch was set OFF and the voltage control knob fully CCW.
+\label{part2} The circuit shown in Figure~\ref{fig:circuit_03} was constructed.
+The Y-connected load was 600 + j300 $\Omega$. The main power switch was turned
+on and the voltage control knob was adjusted to 120-V line-to-line. The analog
+EMS voltmeter and the metering window were both monitored for correct voltage.
+The values for primary and secondary line voltage, primary and secondary line
+current, and primary input power were measured and recorded. A Fluke multimeter
+was used to measure the RMS voltage across the load. This load voltage was
+labeled as $E_4$. These values are shown in Table~\ref{tab:results}.  The main
+power switch was set OFF and the voltage control knob fully CCW.
 
 \subsection{Y--$\Delta$ Connected Transformer}
 
-\label{part3} The circuit shown in Figure~\ref{fig:circuit_04} was then constructed. 
-The Y-connected load was 600 + j300 $\Omega$. The main power switch was turned on and the 
-voltage control knob was adjusted to 120-V line-to-line. The analog EMS voltmeter and 
-the metering window were both monitored for correct voltage. The values for primary and 
-secondary line voltage, primary and secondary line current, and primary input power were
-measured and recorded. A Fluke multimeter was used to measure the RMS voltage across the 
-load. This load voltage was labeled as $E_4$. These values are shown in Table~\ref{tab:results}.  
-The main power switch was set OFF and the voltage control knob fully CCW.
+\label{part3} The circuit shown in Figure~\ref{fig:circuit_04} was then
+constructed.  The Y-connected load was 600 + j300 $\Omega$. The main power
+switch was turned on and the voltage control knob was adjusted to 120-V
+line-to-line. The analog EMS voltmeter and the metering window were both
+monitored for correct voltage. The values for primary and secondary line
+voltage, primary and secondary line current, and primary input power were
+measured and recorded. A Fluke multimeter was used to measure the RMS voltage
+across the load. This load voltage was labeled as $E_4$. These values are shown
+in Table~\ref{tab:results}.  The main power switch was set OFF and the voltage
+control knob fully CCW.
 
 \section{Results}
 \subsection{The Three Phase Source}
@@ -84,9 +91,9 @@ The main power switch was set OFF and the voltage control knob fully CCW.
   \centering
   \begin{tabular}{*{5}{c}}
     & \textbf{$E_1$} & \textbf{$E_2$} & \textbf{$E_3$} & \textbf{$E_1$+$E_2$+$E_3$} \\
-    
+
     \hline
-    
+
     \textbf{$V_{LL}$} & 120.4 & 117.1 & 116.3 & 0.998 \\
     \textbf{$V_{phase}$} & 69.77 & 64.56 & 69.01 & 5.15 \\
   \end{tabular}
@@ -208,30 +215,32 @@ Equations Used:
 \[\text{Transformer Efficiency}\eta = \frac{P_{out}}{P_\text{in}} * 100\% \]
 \[\text{Percent Deviation} = \frac{\text{calculated data - lab data}}{\text{lab data}} * 100\%\]
 
-\section{Conclusions}
-During Part 1: The Three-Phase Source, the three-phase source line and phase voltages were 
-measured. In Circuit 1, the three source voltages are in a $\Delta$ connection, and hence the
-voltage values for each phase are the same as the supply voltage 120-V line-to-line. When the 
-voltages are added together, they approximate 0 volts due to Kirchoff's voltage law. In Circuit
-2, the three source voltages are in a Y-connection, and hence the voltage values for each phase
-are 1/\sqrt{3} times the line voltage of 120-V. When the voltages are added together, they 
-approximate 0 volts, since the connection is assumed to be balanced. When the Phasor Analyzer was
-analyzed on the PC, it was confirmed that the phasors were equal with 120 degrees phase shift
-for both the line and phase voltage measurements. The fact that the addition of the phasors
-was not exactly zero was most likely due to the fact that the voltage values measured were not 
-exactly equal to each other.
+\section{Conclusions} During Part 1: The Three-Phase Source, the three-phase
+source line and phase voltages were measured. In Circuit 1, the three source
+voltages are in a $\Delta$ connection, and hence the voltage values for each
+phase are the same as the supply voltage 120-V line-to-line. When the voltages
+are added together, they approximate 0 volts due to Kirchoff's voltage law. In
+Circuit 2, the three source voltages are in a Y-connection, and hence the
+voltage values for each phase are 1/$\sqrt{3}$ times the line voltage of 120-V.
+When the voltages are added together, they approximate 0 volts, since the
+connection is assumed to be balanced. When the Phasor Analyzer was analyzed on
+the PC, it was confirmed that the phasors were equal with 120 degrees phase
+shift for both the line and phase voltage measurements. The fact that the
+addition of the phasors was not exactly zero was most likely due to the fact
+that the voltage values measured were not exactly equal to each other.
 
-When the transformer efficiencies for both connections were calculated, it was found that 
-the Y-$\Delta$ connection was more efficient than the Y-Y connection. In the Y-$\Delta$ 
-connection, the secondary $\Delta$ configuration helped make the transformer bank more 
-stable and thus more efficient. This was most like due to the fact that a Y-$\Delta$ 
-has no problem with third-harmonic components in its voltages.
+When the transformer efficiencies for both connections were calculated, it was
+found that the Y-$\Delta$ connection was more efficient than the Y-Y
+connection. In the Y-$\Delta$ connection, the secondary $\Delta$ configuration
+helped make the transformer bank more stable and thus more efficient. This was
+most like due to the fact that a Y-$\Delta$ has no problem with third-harmonic
+components in its voltages.
 
 \section*{Circuits Tested}
 \begin{figure}[H]
   \centering
   \includegraphics[width=.8\textwidth]{img/circuit_01}
-  \caption{Cirucit used to measure line voltages for Part 1}
+  \caption{Circuit used to measure line voltages for Part 1}
   \label{fig:circuit_01}
 \end{figure}
 
